change function names and adding one

--- a/src/app/pages/schedule/components/details-sidepanel/details-sidepanel.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/details-sidepanel.component.html
@@ -112,6 +112,6 @@
     "
   />
   @if (isCreatingOrModifiying(appointmentArray()) || selectedBox()) {
-    <button class="text-charcoal" (click)="reset()">Cancelar</button>
+    <button class="text-charcoal" (click)="cancelAction()">Cancelar</button>
   }
 </div>
