--- a/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-} @else {
+} @else if (appointment().id) {
   <div class="flex flex-col">
     <span></span>
     <span class="opacity-80"></span>
