--- a/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
@@ -7,47 +7,99 @@
       <span class="opacity-80 w-fit">{{ getHours(appointment().date) }}</span>
       <!-- calendar icon svg -->
       <div class="flex space-x-2">
-        <svg
-          width="20"
-          height="20"
-          class="fill-inherit"
-          viewBox="0 0 54 57"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M19.5 0L15.75 0.9375V3.75H19.5V0ZM19.5 3.75V7.5H15.75V3.75H15.7275C11.0063 3.8025 7.5525 3.6375 4.7325 5.19C3.3225 5.97 2.20125 7.29 1.5825 8.93625C0.9675 10.5787 0.75 12.5362 0.75 15V45C0.75 47.4638 0.9675 49.4175 1.5825 51.0637C2.20125 52.71 3.3225 54.0187 4.7325 54.7987C7.55625 56.355 11.01 56.1938 15.7275 56.25H38.2725C42.99 56.1938 46.44 56.355 49.2638 54.7987C50.7247 53.9702 51.8398 52.6449 52.4062 51.0637C53.025 49.4175 53.25 47.3512 53.25 45V15C53.25 12.5325 53.025 10.5787 52.4062 8.93625C51.8384 7.35399 50.7239 6.02669 49.2638 5.19375C46.44 3.63375 42.99 3.80625 38.2725 3.75H38.25V7.5H34.5V3.75H19.5ZM34.5 3.75H38.25V0L34.5 0.9375V3.75ZM15.7725 18.75H38.25C42.975 18.8025 46.0763 18.975 47.4488 19.7288C48.135 20.1113 48.5325 20.5275 48.8962 21.5025C49.2637 22.4775 49.4962 26.25 49.4962 26.25V45C49.4962 47.22 49.2637 48.7688 48.8962 49.7438C48.5325 50.7188 48.135 51.1387 47.4488 51.5175C46.0763 52.275 42.9712 52.4438 38.25 52.5H15.75C11.025 52.4438 7.92375 52.275 6.5475 51.5175C5.86125 51.1387 5.46375 50.7188 5.1 49.7438C4.7325 48.7688 4.5 47.22 4.5 45V26.25C4.5 24.0263 4.7325 22.4775 5.1 21.5025C5.46375 20.5275 5.86125 20.1113 6.5475 19.7288C7.92375 18.9713 11.0325 18.8025 15.7725 18.75Z"
-            fill="inherit"
-          />
-        </svg>
-        <span class="opacity-80">{{
-          appointment().isOnline ? "Teleconsulta" : "Presencial"
-        }}</span>
+        @if (isUserAllowToSee(authService.getAuthenticationState())) {
+          <svg
+            width="20"
+            height="20"
+            class="fill-inherit"
+            viewBox="0 0 54 57"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M19.5 0L15.75 0.9375V3.75H19.5V0ZM19.5 3.75V7.5H15.75V3.75H15.7275C11.0063 3.8025 7.5525 3.6375 4.7325 5.19C3.3225 5.97 2.20125 7.29 1.5825 8.93625C0.9675 10.5787 0.75 12.5362 0.75 15V45C0.75 47.4638 0.9675 49.4175 1.5825 51.0637C2.20125 52.71 3.3225 54.0187 4.7325 54.7987C7.55625 56.355 11.01 56.1938 15.7275 56.25H38.2725C42.99 56.1938 46.44 56.355 49.2638 54.7987C50.7247 53.9702 51.8398 52.6449 52.4062 51.0637C53.025 49.4175 53.25 47.3512 53.25 45V15C53.25 12.5325 53.025 10.5787 52.4062 8.93625C51.8384 7.35399 50.7239 6.02669 49.2638 5.19375C46.44 3.63375 42.99 3.80625 38.2725 3.75H38.25V7.5H34.5V3.75H19.5ZM34.5 3.75H38.25V0L34.5 0.9375V3.75ZM15.7725 18.75H38.25C42.975 18.8025 46.0763 18.975 47.4488 19.7288C48.135 20.1113 48.5325 20.5275 48.8962 21.5025C49.2637 22.4775 49.4962 26.25 49.4962 26.25V45C49.4962 47.22 49.2637 48.7688 48.8962 49.7438C48.5325 50.7188 48.135 51.1387 47.4488 51.5175C46.0763 52.275 42.9712 52.4438 38.25 52.5H15.75C11.025 52.4438 7.92375 52.275 6.5475 51.5175C5.86125 51.1387 5.46375 50.7188 5.1 49.7438C4.7325 48.7688 4.5 47.22 4.5 45V26.25C4.5 24.0263 4.7325 22.4775 5.1 21.5025C5.46375 20.5275 5.86125 20.1113 6.5475 19.7288C7.92375 18.9713 11.0325 18.8025 15.7725 18.75Z"
+              fill="inherit"
+            />
+          </svg>
+          <span class="opacity-80">{{
+            appointment().isOnline ? "Teleconsulta" : "Presencial"
+          }}</span>
+        } @else {
+          <svg
+            class="fill-inherit"
+            width="20"
+            height="20"
+            viewBox="0 0 46 60"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M8 22.5V15C8 6.71572 14.7157 0 23 0C31.2841 0 38 6.71572 38 15V22.5H45.5V60H0.5V22.5H8ZM15.5 15C15.5 10.8579 18.8579 7.5 23 7.5C27.1421 7.5 30.5 10.8579 30.5 15V22.5H15.5V15ZM19.25 48.75V33.75H26.75V48.75H19.25Z"
+              fill="inherit"
+            />
+          </svg>
+          <span>Hora no disponible</span>
+        }
       </div>
     </div>
   </div>
-} @else if (appointment().id) {
-  <div class="flex flex-col">
-    <span></span>
-    <span class="opacity-80"></span>
-  </div>
-  <svg
-    width="19"
-    height="16"
-    viewBox="0 0 19 16"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-  >
-    <path
-      d="M2 8H17M17 8L10.75 2M17 8L10.75 14"
-      stroke="white"
-      stroke-width="3"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    />
-  </svg>
-  <div class="flex flex-col">
-    <span></span>
-    <span class="opacity-80"></span>
-  </div>
+} @else {
+  @if (appointment().id) {
+    <!-- if id is not '' the appointment is being updated -->
+    <div class="flex flex-col items-start">
+      <span class="text-lg font-bold h-6 opacity-95">
+        {{ getDate(appointment().date) }}</span
+      >
+      <span class="opacity-80">{{ getHours(appointment().date) }}</span>
+    </div>
+    <svg
+      width="19"
+      height="16"
+      viewBox="0 0 19 16"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M2 8H17M17 8L10.75 2M17 8L10.75 14"
+        stroke="white"
+        stroke-width="3"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      />
+    </svg>
+    <div class="flex flex-col items-start">
+      <span class="text-lg font-bold h-6 opacity-95">
+        {{ getDate(newDate()) }}</span
+      >
+      <span class="opacity-80">{{ getHours(newDate()) }}</span>
+    </div>
+  } @else {
+    @if (isDateAvailable()) {
+      <!-- if id is not '' the appointment is being updated -->
+      <div class="flex flex-col items-start">
+        <span class="text-lg font-bold h-6 opacity-95">
+          {{ getDate(appointment().date) }}</span
+        >
+        <span class="opacity-80">{{ getHours(appointment().date) }}</span>
+      </div>
+      <svg
+        class="fill-inherit"
+        width="20"
+        height="20"
+        viewBox="0 0 40 40"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M20 0C31.0457 0 40 8.95431 40 20C40 31.0457 31.0457 40 20 40C8.95431 40 0 31.0457 0 20C0 8.95431 8.95431 0 20 0ZM20 5C11.7157 5 5 11.7157 5 20C5 28.2843 11.7157 35 20 35C28.2843 35 35 28.2843 35 20C35 11.7157 28.2843 5 20 5ZM22.5 10L22.4999 17.5H30V22.5L22.4999 22.4999L22.5 30H17.5V22.4999L10 22.5V17.5H17.5V10H22.5Z"
+          fill="inherit"
+        />
+      </svg>
+      <span>Hora disponible</span>
+    } @else {}
+  }
 }
