setup links and button label names, add redirect for guards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -169,7 +169,7 @@
     class="flex space-x-10 mt-16 text-lg | lg:mt-0 lg:justify-start lg:items-start lg:flex-col lg:space-x-0 lg:space-y-4"
   >
     <li>
-      <a class="flex justify-center space-x-6" href="/">
+      <a class="flex justify-center space-x-6" href="tel:+56989323392">
         <img
           class="w-10 | lg:w-6"
           src="assets/icons/whatsapp-icon.svg"
@@ -179,7 +179,11 @@
       >
     </li>
     <li>
-      <a class="flex justify-center space-x-6" href="/">
+      <a
+        class="flex justify-center space-x-6"
+        href="https://www.instagram.com/_nutri_pia/"
+        target="_blank"
+      >
         <img
           class="w-10 | lg:w-6"
           src="assets/icons/instagram-icon.svg"
@@ -189,7 +193,10 @@
       >
     </li>
     <li class="flex justify-center">
-      <a class="flex justify-center items-center space-x-6" href="/">
+      <a
+        class="flex justify-center items-center space-x-6"
+        href="mailto:pia.nutricionista@gmail.com"
+      >
         <img class="w-10 | lg:w-6" src="assets/icons/mail-icon.svg" alt="" />
         <span class="hidden | lg:block"
           >pia.nutricionista&#64;gmail.com</span
