--- a/src/app/pages/home/sections/cta/cta.component.html
+++ b/src/app/pages/home/sections/cta/cta.component.html
@@ -9,7 +9,7 @@
   <h2 class="text-4xl text-center max-w-[12ch] font-black mb-6 | md:max-w-none">
     ¡Transforma tu salud hoy!
   </h2>
-  <nt-button [isPrimary]="false" label="Contactame" href="/" />
+  <nt-button [isPrimary]="false" label="Registrarse" href="/subscripcion" />
 
   <div class="flex space-x-4 mt-10 | md:hidden">
     <nt-decorative-icon type="fish" color="#9C90B4" />
