--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -21,7 +21,7 @@
     <nt-button
       [isPrimary]="true"
       label="Reserva tu cita"
-      href="/subscripcion"
+      href="/administracion/agenda"
     />
   </div>
   <!-- hero img section -->
