--- a/src/app/shared/price-box/price-box.component.html
+++ b/src/app/shared/price-box/price-box.component.html
@@ -86,6 +86,6 @@
     [rounded]="false"
     class="w-48"
     label="Empieza ya"
-    href="/subscripcion"
+    (click)="navigateAndScrollTo('/subscripcion')"
   />
 </div>
