--- a/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
@@ -73,6 +73,7 @@
       >
       <span class="opacity-80">{{ getHours(appointment().date) }}</span>
     </div>
+    <!-- editing icon -->
     <svg
       width="19"
       height="16"
@@ -95,14 +96,15 @@
       <span class="opacity-80">{{ getHours(newDate()) }}</span>
     </div>
   } @else {
+    <!-- if id is not '' the appointment is being updated -->
+    <div class="flex flex-col items-start">
+      <span class="text-lg font-bold h-6 opacity-95">
+        {{ getDate(appointment().date) }}</span
+      >
+      <span class="opacity-80">{{ getHours(appointment().date) }}</span>
+    </div>
+    <!-- available icon -->
     @if (isDateAvailable()) {
-      <!-- if id is not '' the appointment is being updated -->
-      <div class="flex flex-col items-start">
-        <span class="text-lg font-bold h-6 opacity-95">
-          {{ getDate(appointment().date) }}</span
-        >
-        <span class="opacity-80">{{ getHours(appointment().date) }}</span>
-      </div>
       <svg
         class="fill-inherit"
         width="20"
@@ -119,6 +121,6 @@
         />
       </svg>
       <span>Hora disponible</span>
-    } @else {}
+    }
   }
 }
