adding a checker to determine if the date is in the past or too soon

--- a/src/app/pages/schedule/components/details-sidepanel/details-sidepanel.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/details-sidepanel.component.html
@@ -139,7 +139,8 @@
         isUserNotAllowToModify(
           selectedBox(),
           appointmentArray(),
-          currentUserInfo()
+          currentUserInfo(),
+          selectedDate()
         )
       "
     />
