updating text and markup with styles

--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -15,12 +15,12 @@
     <p
       class="font-serif text-charcoal text-center font-light max-w-[40ch] mt-2 mb-4 | lg:text-left lg:tracking-wide | xl:text-[18px]"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua.
+      Optimiza tu bienestar con mi guía nutricional. Regístrate y agenda tu
+      consulta para iniciar tu camino hacia una vida más saludable.
     </p>
     <nt-button
       [isPrimary]="true"
-      label="Reserva tu cita"
+      label="Empieza ya"
       href="/administracion/agenda"
     />
   </div>
