--- a/src/app/pages/home/sections/why-us/why-us.component.html
+++ b/src/app/pages/home/sections/why-us/why-us.component.html
@@ -9,22 +9,22 @@
     <nt-why-us-box
       benefit="Diagnostico"
       imagePath="assets/icons/doctor-tool-icon.svg"
-      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+      description="Me permitirá evaluar tu salud actual y darte a conocer los resultados a través de diversos indicadores"
     />
     <nt-why-us-box
       benefit="Antropometria"
       imagePath="assets/icons/doctor-tool-icon.svg"
-      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+      description="Utilizo medidas corporales como peso, altura y circunferencias para obtener información precisa sobre tu composición corporal"
     />
     <nt-why-us-box
       benefit="Plan Dietetico"
       imagePath="assets/icons/doctor-tool-icon.svg"
-      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+      description="Diseño planes dietéticos personalizados para que te sientas bien en todos los aspectos de tu vida"
     />
     <nt-why-us-box
       benefit="Seguimiento"
       imagePath="assets/icons/doctor-tool-icon.svg"
-      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+      description="Estaré aquí para resolver tus dudas, ajustar tu plan y evaluar cómo te sientes, asegurando que avances de manera saludable."
     />
   </div>
 </section>
