--- a/src/app/shared/why-us-box/why-us-box.component.html
+++ b/src/app/shared/why-us-box/why-us-box.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-white-lavender w-72 py-8 flex flex-col items-center border border-primary-purple rounded-xl"
+  class="bg-white-lavender w-[20rem] py-8 flex flex-col items-center border border-primary-purple rounded-xl"
 >
   <div
     class="bg-primary-purple p-5 my-2 rounded-full border border-dark-slate-grape"
@@ -9,5 +9,7 @@
   <h3 class="text-primary-purple text-lg font-semibold text-center">
     {{ benefit() }}
   </h3>
-  <p class="text-soft-charcoal text-center w-44">{{ description() }}</p>
+  <p class="text-soft-charcoal mt-1 text-center max-w-[15rem]">
+    {{ description() }}
+  </p>
 </div>
