changing why us image icons

--- a/src/app/shared/why-us-box/why-us-box.component.html
+++ b/src/app/shared/why-us-box/why-us-box.component.html
@@ -4,7 +4,7 @@
   <div
     class="bg-primary-purple p-5 my-2 rounded-full border border-dark-slate-grape"
   >
-    <img [src]="imagePath()" />
+    <img [src]="imagePath()" class="w-10 h-10" />
   </div>
   <h3 class="text-primary-purple text-lg font-semibold text-center">
     {{ benefit() }}
