adding images and styles, markup and styles finish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
         </li>
         <li>
           <a
-            class="lg:hover:text-charcoal lg:hover:cursor-pointer"
+            class="lg:hover:text-charcoal lg:hover:cursor-pointer lg:text-nowrap"
             (click)="scrollTo('/', 'about')"
             ariaCurrentWhenActive="page"
             >Sobre Mi</a
