--- a/src/app/pages/home/sections/about/about.component.html
+++ b/src/app/pages/home/sections/about/about.component.html
@@ -7,7 +7,7 @@
     class="flex flex-col items-center | lg:items-center | 2xl:items-start lg:flex-row 2xl:translate-x-24"
   >
     <div
-      class="flex flex-col space-y-4 items-center text-center | lg:max-w-none lg:ml-20 lg:space-y-12 lg:items-start lg:text-left lg:order-2 | 2xl:ml-10"
+      class="flex flex-col space-y-4 items-center text-center text-charcoal | lg:max-w-none lg:ml-20 lg:space-y-12 lg:items-start lg:text-left lg:order-2 | 2xl:ml-10"
     >
       <h3 class="text-2xl tracking-wide font-light | lg:text-4xl">
         Egresada de <b class="block font-black">La Univerisidad INACAP</b>
@@ -21,31 +21,28 @@
       </h3>
     </div>
     <div
-      class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full border-2 border-solid border-charcoal mt-8 max-w-80 text-center px-6 pt-8 rounded-t-lg rounded-b-[135px] | 2xl:items-start 2xl:mt-24 2xl:py-10 2xl:w-auto 2xl:justify-start 2xl:max-w-none 2xl:text-left 2xl:pl-20 2xl:pr-24 2xl:order-1 2xl:rounded-e-full 2xl:overflow-visible 2xl:relative 2xl:mr-10"
+      class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full border-2 border-solid border-charcoal mt-8 max-w-80 text-center px-6 pt-8 rounded-t-lg rounded-b-[135px] | 2xl:items-start 2xl:mt-40 2xl:py-10 2xl:w-auto 2xl:justify-start 2xl:max-w-none 2xl:text-left 2xl:pl-20 2xl:pr-[4.2rem] 2xl:order-1 2xl:rounded-e-full 2xl:overflow-visible 2xl:relative 2xl:mr-10"
     >
       <nt-subtitle
         class="hidden | 2xl:text-charcoal 2xl:flex 2xl:absolute top-[-2.5rem]"
         title="Sobre mi"
       />
-      <div class="space-y-2 w-full max-w-sm | 2xl:max-w-[340px]">
+      <div class="space-y-2 w-full max-w-sm | 2xl:max-w-[280px]">
         <h2 class="font-semibold text-xl | 2xl:text-2xl">¿Quien Soy?</h2>
         <p class="lg:text-lg">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivam3us
-          lacinia odio vitae vestibulum vestibulum.
+          Soy Pía Ulloa, nutricionista, y creo en el bienestar integral: físico,
+          emocional y mental.
         </p>
       </div>
-      <div class="max-w-sm mt-8 | 2xl:max-w-[340px] 2xl:space-y-2">
-        <h2 class="font-semibold text-xl | 2xl:text-2xl">
-          ¿Por que nutricion?
-        </h2>
+      <div class="max-w-sm mt-4 | 2xl:max-w-[280px] 2xl:space-y-2">
         <p class="2xl:text-lg">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-          lacinia odio vitae vestibulum vestibulum.
+          Mi misión es acompañarte con compromiso y empatía, para que te sientas
+          bien en todos los aspectos de tu vida.
         </p>
       </div>
       <img
         src="assets/images/mobile-about-image.png"
-        class="mt-5 w-full | 2xl:absolute 2xl:max-w-sm left-0 bottom-[-2px] 2xl:translate-x-[-75%]"
+        class="mt-2 w-[20rem] max-w-none | 2xl:absolute lg:w-full 2xl:max-w-96 bottom-[-2px] 2xl:translate-x-[-95%]"
       />
     </div>
   </div>
