--- a/src/app/shared/subtitle/subtitle.component.html
+++ b/src/app/shared/subtitle/subtitle.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="customClasses">
+<div class="flex text-charcoal space-x-6 items-center" [ngClass]="class()">
   <img src="/assets/icons/apple-icon.svg" class="w-7" alt="fruit icon" />
   <h2
     class="text-2xl text-center font-normal max-w-[9ch] | lg:max-w-none lg:text-nowrap lg:text-4xl"
