--- a/src/app/pages/home/sections/about/about.component.html
+++ b/src/app/pages/home/sections/about/about.component.html
@@ -41,7 +41,7 @@
         </p>
       </div>
       <img
-        src="assets/images/mobile-about-image.png"
+        src="assets/images/mobile-about-image.webp"
         class="mt-2 w-[20rem] max-w-none | 2xl:absolute lg:w-full 2xl:max-w-96 bottom-[-2px] 2xl:translate-x-[-95%]"
       />
     </div>
