--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -34,7 +34,7 @@
       alt="hero image"
     />
     <img
-      src="assets/images/desktop-hero-image.png"
+      src="assets/images/desktop-hero-image.webp"
       class="hidden w-full max-w-3xl | 2xl:block"
       alt="hero image"
     />
