fixing image not found

--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -29,7 +29,7 @@
     class="flex order-1 bg-m mt-6 | lg:justify-center lg:flex-1 lg:order-2 lg:mt-10"
   >
     <img
-      src="assets/images/mobile-hero-image.png"
+      src="assets/images/mobile-hero-image.webp"
       class="2xl:hidden block w-full max-w-md"
       alt="hero image"
     />
