--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -8,6 +8,7 @@
     <nt-calendar class="w-full | sm:w-4/5 | lg:w-full" />
   </div>
   <div
+    id="sidePanel"
     class="border-l border-lavender-gray | lg:h- lg:px-4 lg:w-small-container"
   >
     <nt-details-sidepanel />
