--- a/src/app/pages/home/sections/cta/cta.component.html
+++ b/src/app/pages/home/sections/cta/cta.component.html
@@ -12,7 +12,7 @@
   <nt-button
     [isPrimary]="false"
     label="Registrarse"
-    (click)="navigateAndScrollTo('/subscripcion', routerSubscription, router)"
+    (click)="navigateAndScrollTo('/subscripcion', router)"
   />
 
   <div class="flex space-x-4 mt-10 | md:hidden">
