all bugs fix and restyle the about section with new images and template

--- a/src/app/pages/before-confirmation/before-confirmation.component.html
+++ b/src/app/pages/before-confirmation/before-confirmation.component.html
@@ -1,8 +1,12 @@
 <section class="h-[80dvh] flex flex-col items-center py-20">
-  <h1 class="text-5xl text-primary-purple font-black">
+  <h1
+    class="text-[2rem] max-w-[200px] text-primary-purple w-fit mx-auto font-black | lg:max-w-none lg:text-5xl"
+  >
     ¡Gracias por registrarte!
   </h1>
-  <p class="max-w-[750px] text-2xl my-5 text-center text-[#313131]">
+  <p
+    class="text-xl max-w-[300px] mt-2 mb-4 text-center text-[#313131] | lg:max-w-[550px] lg:my-5 lg:text-2xl"
+  >
     Para activar tu cuenta, por favor <b>confirma tu correo electrónico</b> a
     través del enlace que te hemos enviado. Si no lo ves en tu bandeja de
     entrada, revisa tu carpeta de spam.
