--- a/src/app/pages/email-confirmation-page/email-confirmation-page.component.html
+++ b/src/app/pages/email-confirmation-page/email-confirmation-page.component.html
@@ -1,6 +1,12 @@
-<section class="h-[80dvh] flex flex-col items-center py-20">
-  <h1 class="text-5xl text-primary-purple font-black">¡Casi terminamos!</h1>
-  <p class="max-w-[450px] text-2xl my-5 text-center text-[#313131]">
+<section class="h-[80dvh] flex flex-col items-center px-4 py-20">
+  <h1
+    class="text-[2rem] text-primary-purple w-fit mx-auto font-black | lg:text-5xl"
+  >
+    ¡Casi terminamos!
+  </h1>
+  <p
+    class="text-2xl max-w-[300px] mt-2 mb-4 text-center text-[#313131] | lg:max-w-[450px] lg:my-5 lg:text-2xl"
+  >
     Para completar el registro de tu usuario haz clic en el enlace de abajo
   </p>
   @if (result() === null) {
