--- a/src/app/pages/home/sections/about/about.component.html
+++ b/src/app/pages/home/sections/about/about.component.html
@@ -1,49 +1,36 @@
 <section
   id="about"
-  class="py-12 flex flex-col items-center space-y-7 px-5 border-lavender-gray border-b | lg:py-20"
+  class="flex flex-col justify-center items-center text-center border-b pt-6 px-4 border-b-lavender-gray | lg:text-left lg:pt-4 lg:flex-row"
 >
-  <nt-subtitle class="2xl:hidden" title="Sobre mi" />
-  <div
-    class="flex flex-col items-center | lg:items-center | 2xl:items-start lg:flex-row 2xl:translate-x-24"
-  >
-    <div
-      class="flex flex-col space-y-4 items-center text-center text-charcoal | lg:max-w-none lg:ml-20 lg:space-y-12 lg:items-start lg:text-left lg:order-2 | 2xl:ml-10"
-    >
-      <h3 class="text-2xl tracking-wide font-light | lg:text-4xl">
-        Egresada de <b class="block font-black">La Univerisidad INACAP</b>
-      </h3>
-      <h3 class="text-2xl tracking-wide font-light | lg:text-4xl">
-        Certificada por <b class="block font-black">Institucion ISAK</b>
-      </h3>
-      <h3 class="text-2xl tracking-wide font-light | lg:text-4xl">
-        Eterna estudiante de la
-        <b class="block font-black">Salud y la vida Fitness</b>
-      </h3>
+  <div class="flex flex-col items-start | lg:order-2 lg:ml-24">
+    <nt-subtitle
+      title="Sobre mi"
+      class="mx-auto my-3 | lg:mx-0 lg:my-0 lg:mb-2"
+    />
+    <div class="text-xl space-y-4 text-charcoal">
+      <p
+        class="max-w-[300px] mx-auto | sm:max-w-[500px] | lg:mx-0 lg:max-w-[550px]"
+      >
+        Soy <b>Pía Ulloa</b>, nutricionista graduada de la
+        <b>Universidad INACAP</b>. Creo firmemente en el bienestar integral:
+        físico, emocional y mental. Con una <b>certificación por ISAK</b>, me he
+        especializado en ayudar a mis pacientes a alcanzar un equilibrio
+        saludable en sus vidas.
+      </p>
+      <p
+        class="max-w-[300px] mx-auto | sm:max-w-[500px] | lg:mx-0 lg:max-w-[550px]"
+      >
+        Mi misión es acompañarte con compromiso, cercanía y empatía para que te
+        sientas bien en todos los aspectos de tu vida. Mi enfoque se basa en el
+        <b>autoconocimiento</b> y la <b>nutrición personalizada</b>, respaldados
+        por mi experiencia en nutrición y antropometría.
+      </p>
     </div>
-    <div
-      class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full border-2 border-solid border-charcoal mt-8 max-w-80 text-center px-6 pt-8 rounded-t-lg rounded-b-[135px] | 2xl:items-start 2xl:mt-40 2xl:py-10 2xl:w-auto 2xl:justify-start 2xl:max-w-none 2xl:text-left 2xl:pl-20 2xl:pr-[4.2rem] 2xl:order-1 2xl:rounded-e-full 2xl:overflow-visible 2xl:relative 2xl:mr-10"
-    >
-      <nt-subtitle
-        class="hidden | 2xl:text-charcoal 2xl:flex 2xl:absolute top-[-2.5rem]"
-        title="Sobre mi"
-      />
-      <div class="space-y-2 w-full max-w-sm | 2xl:max-w-[280px]">
-        <h2 class="font-semibold text-xl | 2xl:text-2xl">¿Quien Soy?</h2>
-        <p class="lg:text-lg">
-          Soy Pía Ulloa, nutricionista, y creo en el bienestar integral: físico,
-          emocional y mental.
-        </p>
-      </div>
-      <div class="max-w-sm mt-4 | 2xl:max-w-[280px] 2xl:space-y-2">
-        <p class="2xl:text-lg">
-          Mi misión es acompañarte con compromiso y empatía, para que te sientas
-          bien en todos los aspectos de tu vida.
-        </p>
-      </div>
-      <img
-        src="assets/images/mobile-about-image.webp"
-        class="mt-2 w-[20rem] max-w-none | 2xl:absolute lg:w-full 2xl:max-w-96 bottom-[-2px] 2xl:translate-x-[-95%]"
-      />
-    </div>
+  </div>
+  <div class="items-center">
+    <img
+      src="assets/images/desktop-about-image.png"
+      class="w-[20rem] mt-4 | lg:mt-0 lg:w-full lg:max-w-[400px]"
+    />
   </div>
 </section>
