--- a/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
@@ -108,9 +108,9 @@
     <!-- if id is not '' the appointment is being updated -->
     <div class="flex flex-col items-start">
       <span class="text-lg font-bold h-6 opacity-95">
-        {{ getDate(appointment().date) }}</span
+        {{ getDate(selectedDate()) }}</span
       >
-      <span class="opacity-80">{{ getHours(appointment().date) }}</span>
+      <span class="opacity-80">{{ getHours(selectedDate()) }}</span>
     </div>
     <!-- available icon -->
     <div class="flex space-x-2 h-full -translate-y-[-10px]">
