--- a/src/app/pages/home/sections/about/about.component.html
+++ b/src/app/pages/home/sections/about/about.component.html
@@ -29,7 +29,7 @@
   </div>
   <div class="items-center">
     <img
-      src="assets/images/desktop-about-image.png"
+      src="assets/images/desktop-about-image.webp"
       class="w-[20rem] mt-4 | lg:mt-0 lg:w-full lg:max-w-[400px]"
     />
   </div>
